<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Domótica</string>
    <string name="action_settings">Settings</string>
    <string name="login_name">Login</string>
    <string name="ichange">Cambiar Fondo</string>
    <string name="welcome">Bienvenido</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="recorder">Recordarme</string>
    <string name="intro">Introducción </string>
    <string name="zlogo">Imagen de Z-wave</string>
    
    <string name="name_web">Grafica Online</string>
    <string name="app_user_database">Base de Datos</string>
	<string name="preferences">Preferencias</string>
    <string name="gridback">Background de GridVied</string>
    <string-array name="periodo">
       	<item >Minuto</item>
       	<item>Hora</item>
       	<item >Dia</item>
       	<item>Mes</item>
    </string-array>
    
    <string-array name="DAY">
        <item name="uno">al primer día</item>
         <item name="dos">al segundo día</item>
         <item name="tres">al tercer día</item>
         <item name="cuatro">al cuarto día</item>
         <item name="cinco">al quinto día</item>
          <item name="seis">al sexto día</item>           
    </string-array>
    <string-array name="value_day">
         <item name="uno">1</item>
         <item name="dos">2</item>
         <item name="tres">3</item>
         <item name="cuatro">4</item>
         <item name="cinco">5</item>
          <item name="seis">6</item>  
        
    </string-array>
	<string-array name="database_time">
	     <item name="semana">Semana</item>
	     <item name="quincena">15 Días</item>
	     <item name="mensual">Mes</item>
	     <item name="bimensual">2 Meses</item>   
	</string-array>
	<string-array name="database_time_value">
	<item name="semana">7</item>
	     <item name="quincena">15</item>
	     <item name="mensual">30</item>
	     <item name="bimensual">60</item>   
	        
	</string-array>
    
    
</resources>
