<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/degradado_verde"
    android:orientation="vertical" >

            <TabHost
                android:id="@+id/tbhost"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TabWidget>

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <LinearLayout
                            android:id="@+id/tab1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >

                            <ScrollView
                                android:id="@+id/scrollView1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" >

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="vertical" >

                                    <TextView
                                        android:id="@+id/tvNameD"
                                        android:layout_width="437dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        android:layout_marginTop="10dp"
                                        android:gravity="center_horizontal"
                                        android:text="@string/welcome"
                                        android:textAppearance="?android:attr/textAppearanceSmall"
                                        android:textColor="#FBFBFB"
                                        android:textSize="42sp"
                                        android:textStyle="bold"
                                        android:typeface="sans" />

                                    <ImageView
                                        android:id="@+id/ivcharts"
                                        android:layout_width="match_parent"
                                        android:layout_height="200dp"
                                        android:layout_marginRight="20dp"
                                        android:layout_marginLeft="20dp"
                                        android:contentDescription="@string/zlogo"
                                        android:src="@drawable/zwavehouse" />

                                    <LinearLayout
                                        android:id="@+id/LinearLayout2"
                                        android:layout_width="match_parent"
                                        android:layout_height="250dp"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginRight="10dp"
                                        android:background="@drawable/xml_border"
                                        android:gravity="center|center_horizontal"
                                        android:orientation="vertical" >

                                        <EditText
                                            android:id="@+id/edtUser"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="10dp"
                                            android:layout_marginLeft="40dp"
                                            android:layout_marginRight="40dp"
                                            android:layout_marginTop="10dp"
                                            android:background="@drawable/xml_edittext"
                                            android:ems="10"
                                            android:hint="@string/user"
                                            android:inputType="textNoSuggestions|textPersonName"
                                            android:paddingBottom="10dp"
                                            android:textSize="19sp" />

                                        <EditText
                                            android:id="@+id/edtPassword"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="10dp"
                                            android:layout_marginLeft="40dp"
                                            android:layout_marginRight="40dp"
                                            android:layout_marginTop="10dp"
                                            android:background="@drawable/xml_edittext"
                                            android:ems="10"
                                            android:hint="@string/password"
                                            android:inputType="textNoSuggestions|textPassword"
                                            android:paddingBottom="10dp"
                                            android:textSize="19sp" />

                                        <CheckBox
                                            android:id="@+id/checkBox1"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="5dp"
                                            android:text="@string/recorder"
                                            android:textColor="#088A29"
                                            android:textSize="16sp" />

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:background="@drawable/xml_border"
                                            android:gravity="center" >

                                            <Button
                                                android:id="@+id/btnStart"
                                                android:layout_width="150dp"
                                                android:layout_margin="7dp"
                                                android:layout_height="wrap_content"
                                                android:background="@drawable/xml_button"
                                                android:textColor="#FBFBFB"
                                                android:textAlignment="center"
                                                android:text="@string/login_name" />

                                            <Button
                                                android:id="@+id/btnIntro"
                                                android:layout_width="150dp"
                                                android:layout_height="wrap_content"
                                              	android:layout_margin="7dp"
                                              	android:textAlignment="center"
                                              	android:textColor="#FBFBFB"
                                                android:background="@drawable/xml_button"
                                                android:text="@string/intro" />

                                        </LinearLayout>

                                    </LinearLayout>

                                </LinearLayout>
                            </ScrollView>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/tab2"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                        </LinearLayout>

                      
                    </FrameLayout>
                </LinearLayout>
            </TabHost>
  


</RelativeLayout>